src/test/deca/codegen/valid/sum_negative_integers.deca
// @result -10
/*
    Description : somme de 2 entiers négatifs

    Résultat : à définir

*/
{
    int x = -1 + -9;
    println(x);
}
