src/test/deca/codegen/invalid/object/int_method_without_return.deca
// @result deca:17:
/*
    Description : Méthode int sans return 

    Résultat : Erreur à l'exécution
*/
class A{
    int x = 5;
    int y(){
        x = 10;
    }
}
{
    A a = new A();

    println(a.x);
    println(a.y());
    println(a.x);
}
        
